test-dir/frontend-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend-tcp
  name: frontend-tcp
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: frontend
  type: LoadBalancer
  externalIPs:
    - 54.175.120.211
status:
  loadBalancer: {}
