test-dir/test-dir-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: test-dir-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/test-dir-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/test-dir-default: "true"
